fix(action-button): remove ghost button flickering on hover

--- a/packages/ui-components/src/components/action-button/action-button.scss
+++ b/packages/ui-components/src/components/action-button/action-button.scss
@@ -86,14 +86,14 @@ $btn-border-colors: (
 		primary: kv-color('primary', 'dark'),
 		secondary: kv-color('neutral-5'),
 		tertiary: kv-color('neutral-2'),
-		ghost: transparent,
+		ghost: kv-color('neutral-7'),
 		danger: kv-color('error', 'dark')
 	),
 	focus: (
 		primary: kv-color('primary'),
 		secondary: kv-color('neutral-0'),
 		tertiary: transparent,
-		ghost: transparent,
+		ghost: kv-color('neutral-7'),
 		danger: transparent
 	),
 	disabled: (
@@ -107,7 +107,7 @@ $btn-border-colors: (
 		primary: kv-color('primary', 'dark'),
 		secondary: kv-color('neutral-5'),
 		tertiary: kv-color('neutral-2'),
-		ghost: transparent,
+		ghost: kv-color('neutral-7'),
 		danger: kv-color('error', 'dark')
 	)
 );
